Second commit: added tests for Controller and Repository