@@ -13,13 +13,6 @@
   <url>http://maven.apache.org</url>
   <dependencies>
 
-<!--    <dependency>-->
-<!--      <groupId>junit</groupId>-->
-<!--      <artifactId>junit</artifactId>-->
-<!--      <version>3.8.1</version>-->
-<!--      <scope>test</scope>-->
-<!--    </dependency>-->
-
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
@@ -32,20 +25,12 @@
       <version>6.0.13</version>
     </dependency>
 
-<!--    <dependency>-->
-<!--      <groupId>javax.servlet</groupId>-->
-<!--      <artifactId>javax.servlet-api</artifactId>-->
-<!--      <version>4.0.1</version>-->
-<!--      <scope>provided</scope>-->
-<!--    </dependency>-->
-
       <dependency>
           <groupId>javax.servlet</groupId>
           <artifactId>servlet-api</artifactId>
           <version>2.5</version>
           <scope>provided</scope>
       </dependency>
-
 
       <dependency>
       <groupId>jakarta.servlet</groupId>
@@ -62,16 +47,9 @@
 
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.10.19</version>
+      <artifactId>mockito-core</artifactId>
+      <version>5.6.0</version>
       <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.10.19</version>
-      <scope>compile</scope>
     </dependency>
 
     <dependency>
@@ -85,5 +63,17 @@
   </dependencies>
   <build>
     <finalName>users_endpoint</finalName>
+
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                  <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
+
+
 </project>
